--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Space Invaders</title>
     <link rel="stylesheet" href="css/foundation.css" />
+    <link rel="stylesheet" href="css/A1Styles.css" />
     <script src="js/vendor/modernizr.js"></script>
+    <script src="js/SpaceInvaders.js"></script>
   </head>
-  <body>
+  <body onload="drawTriangle()">
     <div class="off-canvas-wrap">
       <div class="inner-wrap">
 
@@ -36,10 +38,14 @@
 
         <section class="main-section">
          <!-- main content goes here -->
-          <p>
-            Eventually, there'll be a canvas here.
-            And hopefully, a fully functioning game.
-          </p>
+          <div class="row">
+            <ul class="small-block-grid-1">
+              <li>
+                <canvas id="mainScreen" width="800" height="600">
+                </canvas>
+              </li>
+            </ul>
+          </div>
         </section>
         <!-- close the off-canvas menu -->
         <a class="exit-off-canvas"></a>
@@ -48,6 +54,7 @@
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
+    <script src="/js/vendor/fastclick.js"></script>
     <script>
       $(document).foundation();
     </script>
