--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -6,10 +6,8 @@
     <title>Space Invaders</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/A1Styles.css" />
-    <script src="js/vendor/modernizr.js"></script>
-    <script src="js/SpaceInvaders.js"></script>
   </head>
-  <body onload="drawTriangle()">
+  <body>
     <div class="off-canvas-wrap">
       <div class="inner-wrap">
 
@@ -41,7 +39,8 @@
           <div class="row">
             <ul class="small-block-grid-1">
               <li>
-                <canvas id="mainScreen" width="800" height="600">
+                <canvas id="mainCanvas" width="800" height="600">
+                  -
                 </canvas>
               </li>
             </ul>
@@ -55,6 +54,8 @@
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
     <script src="/js/vendor/fastclick.js"></script>
+    <script src="js/vendor/modernizr.js"></script>
+    <script src="js/SpaceInvaders.js"></script>
     <script>
       $(document).foundation();
     </script>
